# calib-commons

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
calib_commons/: camera.py  correspondences.py  eval_generic_scene.py  intrinsics.py  observation.py  types.py  world_frame.py
calib_commons/data/: data_pickle.py  load_calib.py
calib_commons/scripts/: internal_calibration.py  run_eval_calib.py
calib_commons/utils/: calib_eval.py  calib_eval_config.py  detect_board.py  se3.py  so3.py  utils.py
calib_commons/viz/: visualization.py  visualization_tools.py
results/: camera_poses.json  correspondences.pkl  eval_correspondences.pkl  metrics.json  scene_estimate.pkl
src/calib_commons/: camera.py  correspondences.py  eval_generic_scene.py  intrinsics.py  objectPoint.py  scene.py
src/calib_commons/data/: data_json.py  load_calib.py
src/calib_commons/utils/: generateCircularCameras.py  utils.py
src/calib_commons/viz/: visualization.py  visualization_tools.py
