[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calib_commons"
version = "0.1.0"
description = ""
authors = [
    { name = "Flueckiger Tim", email = "timflueckiger@outlook.com" }
]
dependencies = [
    "numpy",
    "opencv-python",
    "scipy",
    "matplotlib",
    "tqdm"
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
